--- a/index.html
+++ b/index.html
@@ -60,19 +60,19 @@
         <table>
           <tr>
              <td>Calories</td>
-             <td>277kcal</td>
+             <td class="color">277kcal</td>
            </tr>
            <tr>
              <td>Carbohydrates</td>
-             <td>20g</td>
+             <td class="color">20g</td>
            </tr>
            <tr>
              <td>Protein</td>
-             <td>22g</td>
+             <td class="color">22g</td>
            </tr>
            <tr>
             <td>Fat</td>
-            <td>22g</td>
+            <td class="color">22g</td>
           </tr>
          </table>
       </div>
