change source css file

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@200;400;600&display=swap">
-  <link rel="stylesheet" href="/CSS/recipestyles.css">
+  <link rel="stylesheet" href="/recipestyles.css">
 </head>
 <body>
   <div class="container">
