--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div class="container">
     <div class="main">
-      <img class="img" src="/images/image-omelette.jpeg" alt="photo d'une omelette">
+      <img class="img" src="./images/image-omelette.jpeg" alt="photo d'une omelette">
       <h1 class="TitleRecipe">Simple Omelette Recipe</h1>
       <p class="description">An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
         to perfection, optionally filled with your choice of cheese, vegetables, or meats.
