--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
         <p class="description">The table below shows nutritional values per serving without the additional fillings.</p>
         <table>
           <tr>
-             <td>Calories</td>
+             <td class="nutr">Calories</td>
              <td class="color">277kcal</td>
            </tr>
            <tr>
-             <td>Carbohydrates</td>
+             <td class="nutr">Carbohydrates</td>
              <td class="color">20g</td>
            </tr>
            <tr>
-             <td>Protein</td>
+             <td class="nutr">Protein</td>
              <td class="color">22g</td>
            </tr>
            <tr>
-            <td>Fat</td>
+            <td class="nutr">Fat</td>
             <td class="color">22g</td>
           </tr>
          </table>
