--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <li class="list_item">Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
           </ul>
       </div>
+      <hr class="line">
       <div class="Instructions">
         <div class="header">Instructions</div>
         <ol>
@@ -54,6 +55,7 @@
           <li class="list_item"><b>Enjoy:</b> Serve hot, with additional salt and pepper if needed.</li>
         </ol>
       </div>
+      <hr class="line">
       <div class="Nutrition">
         <div class="header">Nutrition</div>
         <p class="description">The table below shows nutritional values per serving without the additional fillings.</p>
@@ -81,7 +83,7 @@
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Lartisimo</a>.
+    Coded by <a href="https://avatars.githubusercontent.com/u/152230864?v=4">Lartisimo</a>.
   </div>
 </body>
 </html>
